--- a/tgui/packages/tgui-panel/styles/goon/chat-light.scss
+++ b/tgui/packages/tgui-panel/styles/goon/chat-light.scss
@@ -1450,3 +1450,17 @@ h2.alert {
   font-style: italic;
   border-bottom: 1px dashed #000;
 }
+
+.ticket_block {
+  background: #a32121;
+  border: 1px solid #111a27;
+  margin: 0.5em;
+  padding: 0.5em 0.75em;
+}
+
+.ticket_block .icon {
+  width: 1.5em;
+  height: 1.5em;
+  margin: 0;
+  padding: 0;
+}
