--- a/html/browser/common.css
+++ b/html/browser/common.css
@@ -500,3 +500,86 @@ a.purple:hover {
 .job_special {
 	background-color: #663e2b;
 }
+
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 50px;
+	height: 26px;
+}
+
+.switch input {display:none;}
+
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #383838;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 18px;
+	width: 18px;
+	left: 4px;
+	bottom: 4px;
+	background-color: #98B0C3;
+	transition: .4s;
+}
+
+.slider.red:before {
+	background-color: #d6858b;
+}
+
+.slider.locked:before {
+	content: url("padlock.png");
+	background-color: #b4b4b4;
+}
+
+input:checked + .slider {
+	background-color: #40628a;
+}
+
+input:checked + .slider.red {
+	background-color: #a92621;
+}
+
+input:checked + .slider.locked {
+	background-color: #707070;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+}
+
+input:focus + .slider.red {
+	box-shadow: 0 0 1px #f3212d;
+}
+
+input:focus + .slider.locked {
+	box-shadow: 0 0 1px #979797;
+}
+
+input:checked + .slider:before {
+	transform: translateX(24px);
+}
+
+.switch span {
+	display: inline-block;
+	position: relative;
+	width: 60px;
+	margin-left: 60px;
+}
+
+ul.sparse {
+	padding-bottom:20px;
+}
+
+.sparse li {
+	margin-top: 2px;
+}
